# charcot-dsl

./: Cargo.toml  README.md  encounter_1.med  fetch.charcot
.idx/: dev.nix
sources/: appointments.json
src/: appointment.rs  autocomplete.rs  command.rs  executor.rs  fhir.rs  main.rs  parser.rs
static/: index.html  style.css
